@@ -9,6 +9,7 @@
       - Switched from data.link to data.printer for settings end point
     * Added size and date attributes to api/logs GET endpoint
     * Removed m_time file attribute
+    * Added restriction for forbidden characters in uploaded file name
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
